cloud/k3s/backend/code-server/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: code-server
  name: code-server
spec:
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
        component: workload
    spec:
      volumes:
      - name: code-server-persistent-storage
        persistentVolumeClaim:
          claimName: code-server-pv-claim
      containers:
      - image: ghcr.io/jobscale/code-server
        name: code-server
        volumeMounts:
        - name: code-server-persistent-storage
          mountPath: /home/store
---
apiVersion: v1
kind: Service
metadata:
  name: code-server
  labels:
    app: code-server
    component: service
spec:
  selector:
    app: code-server
  type: LoadBalancer
  ports:
  - name: tcp
    port: 80
    protocol: TCP
    targetPort: 3000
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: code-server
  labels:
    app: code-server
    component: middleware
spec:
  basicAuth:
    secret: basic-auth
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: code-server
  labels:
    app: code-server
    component: ingress
spec:
  entryPoints: [ web, websecure ]
  tls:
    secretName: jsxjp-tls
  routes:
  - match: Host('code-server.jsx.jp')
    kind: Rule
    middlewares:
    - name: code-server
    services:
    - name: code-server
      port: 80
  - match: Host('code-server.x.jsx.jp')
    kind: Rule
    middlewares:
    - name: code-server
    services:
    - name: code-server
      port: 80
